# nuvision_arraylab_phase_005D_RUNFIX_repo

./: Makefile  README.md  TESTING.md  alembic.ini  docker-compose.yml  doctor.bat  local_test_harness.html  manifest.json  reset_local_db.bat  run_dev.bat  run_tests.bat  verification_report_phase_001C.json  verification_report_phase_001D.json  verification_report_phase_001E.json  verification_report_phase_002A.json  verification_report_phase_002B.json  verification_report_phase_002C.json  verification_report_phase_002D.json  verification_report_phase_003A.json  verification_report_phase_003B.json  verification_report_phase_003C.json  verification_report_phase_003D.json  verification_report_phase_004A.json  verification_report_phase_004C.json  verification_report_phase_004D.json  verification_report_phase_004E.json  verification_report_phase_005A.json  verification_report_phase_005B.json  verification_report_phase_005C.json  verification_report_phase_005D_RUNFIX.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/tests/: test_calculation_run.py  test_commercial_snapshots.py  test_datasheet_downloader_worker.py  test_datasheet_harvester_hardening.py  test_datasheet_review_queue.py  test_datasheet_review_ui_model_selection.py  test_geometry_import_harness.py  test_geometry_quality_setbacks.py  test_hash_utils.py  test_local_debug_harness.py  test_map_geometry_sync.py  test_panel_packing_engine.py  test_panel_packing_governance.py  test_product_snapshot_apply.py  test_project_geometry_spine.py  test_shade_preview.py  test_solar_geometry_prep.py  (+5 more)
(+98 files in other folders)
